--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "witcher",
-  "homepage": "http://rin52.github.io/sad-albert",
-  "version": "0.1.0",
+  "homepage": "https://rin52.github.io/sad-albert/",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.10.2",
