--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "witcher",
-  "homepage": "https://rin52.github.io/sad-albert",
+  "homepage": "https://rin52.github.io",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
