--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "ajv": "7.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-ga": "3.3.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_SIM=sim react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
